[package]
name = "rusty-wrenches"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "fix-nested-directories"
path = "src/bin/fix-nested-directories.rs"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
log = "0.4.25"
env_logger = "0.11.6"
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
futures = "0.3"
async-stream = "0.3"
async-recursion = "1.0"

[dev-dependencies]
rand = "0.8"
